Estructura inical de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="Cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es el titlo atractivo e interesante
                 del post
