Finalizada la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div id="container">
-        <div id="Cabecera">
-            Cabecera
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Este es el titlo atractivo e interesante
