--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,11 @@
                 explicar las cosas increibles que se pueden hacer con 
                 ramas
             </p>
+            <p>
+                Los blogs son la mejor forma de compartir informacion y tus 
+                ideas.Mucho mas que ir a conferencias o salir en Youtube.
+                Excepto si eres un rockstar.Pero estadisticamente no lo eres... Por ahora.
+            </p>
         </div>
     </div>
 </body>
