Agregue suscripcion,Cambie la cabecera maestra y puse  todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titlo atractivo e interesante
@@ -25,6 +25,8 @@
                 ideas.Mucho mas que ir a conferencias o salir en Youtube.
                 Excepto si eres un rockstar.Pero estadisticamente no lo eres... Por ahora.
             </p>
+
+            <p>Suscribite y dale like</p>
         </div>
     </div>
 </body>
