--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Titulo del post</title>
+    <title>Welcome to hyperblog</title>
 </head>
 <body>
     <div id="container">
