Color de fondo, Logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img src="img/MyAvatar.png" id="logo">
             Hyperblog
             <span id="tagline">Tu blog de cabecera</span>
         </div>
@@ -26,7 +27,7 @@
                 Excepto si eres un rockstar.Pero estadisticamente no lo eres... Por ahora.
             </p>
 
-            <p>Suscribite y dale like</p>
+            <p>Suscribite y dale like :)</p>
         </div>
     </div>
 </body>
