--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <title>Welcome to hyperblog</title>
 </head>
 <body>
-    <div id="container">
+    <div class="container my-5" id="container">
         <div id="cabecera">
             <img src="img/MyAvatar.png" id="logo">
             Hyperblog
