Ajustes en el HTML

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
     <title>Welcome to hyperblog</title>
 </head>
 <body>
-    <div class="container my-5" id="container">
+    <div id="container">
         <div id="cabecera">
             <img src="img/MyAvatar.png" id="logo">
             Hyperblog
@@ -17,19 +17,19 @@
             <h1>Este es el titlo atractivo e interesante
                 del post
             </h1>
-            <p>Y este es el parrafo de inicio donde vamos a 
+            <p>Y este es el parrafo de iniciio donde vamos a 
                 explicar las cosas increibles que se pueden hacer con 
                 ramas
             </p>
             <p>
-                Los blogs son la mejor forma de compartir informacion y tus 
+                Los blogs son la mejor forma de compartir informacioon y tus 
                 ideas.Mucho mas que ir a conferencias o salir en Youtube.
                 Excepto si eres un rockstar.Pero estadisticamente no lo eres... Por ahora.
             </p>
             <p>Suscribite y dale like :)</p>
         </div>
         <div id="footer">
-            By: Emanuel Vanegas Castañeda
+        Emanuel Vanegas Castañeda // Copyright &copy;
         </div>
     </div>
 </body>
