--- a/blogpost.html
+++ b/blogpost.html
@@ -17,12 +17,12 @@
             <h1>Este es el titlo atractivo e interesante
                 del post
             </h1>
-            <p>Y este es el parrafo de iniciio donde vamos a 
-                explicar las cosas increibles que se pueden hacer con 
+            <p>Y este es el párrafo de inicio donde vamos a 
+                explicar las cosas increíbles que se pueden hacer con 
                 ramas
             </p>
             <p>
-                Los blogs son la mejor forma de compartir informacioon y tus 
+                Los blogs son la mejor forma de compartir información y tus 
                 ideas.Mucho mas que ir a conferencias o salir en Youtube.
                 Excepto si eres un rockstar.Pero estadisticamente no lo eres... Por ahora.
             </p>
